--- a/frontend-webapp/DBS/src/components/styles/TopNavigationStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/TopNavigationStyles.css
@@ -1,77 +1,82 @@
 .container {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    background-color: white;
-  }
+  width: 100vw;
+  overflow-y:scroll ;
+  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+}
   
-  .header {
+  .header1 {
+    max-width: 100vw;
     display: flex;
     flex-direction: row;
-    padding-top: 4%;
     align-items: center;
-    padding-right: 1%;
+    background-color: white;
+    padding: 2vw 0;
   }
   
   .blueline {
-    width: 0.7%;
-    height: 80%;
-    margin-top: 0.7%;
-    margin-right: 2.5%;
     background-color: #066DAF;
+    width: 0.5vw;
+    height: 3vh;
+    margin: 4vw;
+    
   }
   
   .yellowline {
-    width: 0.7%;
-    height: 80%;
-    margin-top: 0.7%;
-    margin-right: 2.5%;
+    width: 0.5vw;
+    height: 3vh;
+    margin: 4vw;
     background-color: #EBAA4E;
   }
   
   .text {
-    font-family: 'Lato-Regular';
+    font-family: 'Lato';
     font-size: 18px;
     font-weight: bold;
     color: #444444;
   }
   
-  .expand {
+  .expand2 {
     object-fit: contain;
-    height: 60%;
     margin-left: auto;
-    margin-top: 1%;
+    width: 2.5vw;
+    padding: 0vw 4vw;
   }
   
   .expandrotated {
     object-fit: contain;
-    height: 60%;
     margin-left: auto;
-    margin-top: 1%;
+    width: 2.5vw;
+    padding: 0vw 4vw;
     transform: rotate(90deg);
   }
   
   .expandrotated2 {
     object-fit: contain;
-    height: 60%;
     margin-left: auto;
-    margin-top: 1%;
+    width: 2.5vw;
+    padding: 0vw 4vw;
     transform: rotate(-90deg);
   }
   
-  .containertwo {
-    padding-left: 5%;
-    padding-right: 5%;
-    padding-bottom: 3%;
+  .container2 {
+    max-width: 100vw;
+    display: flex;
+    background-color: white;
+    padding: 0;
+    margin: 0;
+    flex-direction: column;
+    align-items: flex-end;
+  
   }
   
   .value {
-    font-family: 'Lato-Regular';
+    font-family: 'Lato';
     font-size: 16px;
     font-weight: bold;
     color: #A3A3A3;
-    text-align: right;
-    padding-top: 7%;
+    margin: 0 5vw -5vw 0;
   }
   
   .textcontainer {
@@ -79,74 +84,91 @@
     flex-direction: row;
     align-items: flex-start;
     justify-content: flex-end;
+    padding: 0;
+    margin: 0;
   }
   
   .sgd {
-    font-family: 'Lato-Regular';
+    font-family: 'Lato';
     font-size: 14px;
     font-weight: bold;
     color: #A3A3A3;
     text-align: right;
-    padding-top: 1.75%;
+    margin-top: 3.5vh;
+    padding-right: 1vw;
   }
   
   .money {
-    font-family: 'Lato-Regular';
+    font-family: 'Lato';
     font-size: 20px;
     font-weight: bold;
     color: #444444;
     text-align: right;
-    padding-left: 1%;
+    padding-right: 5vw;
   }
   
   .line {
-    border-bottom-color: #A3A3A3;
-    border-bottom-width: 1px;
-    width: 95%;
-    align-self: center;
+    width: 100vw;
+    height: 1px;
+    background-color: #A3A3A3;
     opacity: 0.4;
-  }
+    display: flex;
+    justify-content: center;
+}  
   
   .insightscontainer {
     background-color: #EFEFEF;
-    margin-bottom: 10%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
   }
   
   .rectangle {
     background-color: white;
-    width: 92%;
     align-self: center;
-    margin-top: 8%;
     border-radius: 7px;
+    width: 90vw;
+    margin: 2.5vh 0 0 0;
   }
   
   .date {
-    font-family: 'Lato-Regular';
+    font-family: 'Lato';
     font-size: 10px;
     font-weight: bold;
     color: #444444;
-    padding-left: 4%;
-    padding-top: 4%;
-    padding-bottom: 1%;
+    margin: 2.5vh 0 0 0;
+    padding-left: 3vw;
   }
   
   .title {
-    font-family: 'Lato-Regular';
+    font-family: 'Lato';
     font-size: 20px;
     font-weight: bold;
     color: #444444;
-    padding-left: 3.5%;
-    max-width: 65%;
+    margin: 1vh 0 0 0;
+    padding: 0;
+    padding-left: 3vw;
   }
   
   .body {
-    font-family: 'Lato-Regular';
+    font-family: 'Lato';
     font-size: 13px;
     font-weight: normal;
     color: #444444;
-    padding-left: 4%;
     max-width: 65%;
-    padding-top: 3px;
-    padding-bottom: 30px;
+    margin: .5vh 0 3vh 0;
+    padding: 0;
+    padding-left: 3.5vw;
   }
-  
+  .buttontransparent {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    width: 100vw;
+    padding: 0;
+    margin:0;
+  }
+  .buttontransparent:active {
+    opacity: 0.5;
+    transition: none;
+  }
