fixed slight padding issue

--- a/frontend-webapp/DBS/src/components/styles/TopNavigationStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/TopNavigationStyles.css
@@ -19,14 +19,14 @@
     background-color: #066DAF;
     width: 0.5vw;
     height: 3vh;
-    margin: 4vw;
+    margin: 4vw 2vw 4vw 4vw;
     
   }
   
   .yellowline {
     width: 0.5vw;
     height: 3vh;
-    margin: 4vw;
+    margin: 4vw 2vw 4vw 4vw;
     background-color: #EBAA4E;
   }
   
