recreated bottomnavigation tab for react, updated recent transaction to react

--- a/frontend-webapp/DBS/src/components/styles/AccountDetailsStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/AccountDetailsStyles.css
@@ -1,4 +1,4 @@
-.textcontainer {
+.textcontainer2 {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
@@ -71,7 +71,7 @@
     margin-left: 6vw;
   }
   
-  .container {
+  .containeracc {
     width: 100vw;
     overflow-y:scroll ;
     overflow-x: hidden;
