--- a/frontend-webapp/DBS/src/components/styles/TopNavigationStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/TopNavigationStyles.css
@@ -131,7 +131,7 @@
     margin: 2.5vh 0 0 0;
   }
   
-  .date {
+  .date2 {
     font-family: 'Lato';
     font-size: 10px;
     font-weight: bold;
