--- a/frontend-webapp/DBS/src/components/styles/BottomTabNavigatorStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/BottomTabNavigatorStyles.css
@@ -1,17 +1,36 @@
-.tabBar {
-  height: 8%;
+.bottomtabnavigatorcontainer {
+  width: 100vw;
+  overflow-x: hidden;
+  display: flex;
+  justify-content: space-around;
+  align-content: center;
+  padding: 0;
+  margin: 0;
   background-color: #162633;
 }
 
-.headericon {
-  object-fit: contain;
-  width: 50%;
-  height: 50%;
+.navicon {
+  height: 3.5vh;
+  padding: 0;
+  margin: 1vh 0 0 0;
 }
 
-.labels {
-  font-family: 'Lato-Regular';
+.navtext {
+  font-family: Lato;
+  font-size: 11px;
   font-weight: bold;
-  margin-bottom: 8%;
-  margin-top: -10%;
+  padding: 0;
+  margin: 0;
+  color: #96A5B0;
+  text-align: center;
+}
+
+.navtextselected {
+  font-family: Lato;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 0;
+  margin: 0;
+  color: white;
+  text-align: center;
 }
