minor edits to api with backend

--- a/frontend-webapp/DBS/src/components/styles/AccountDetailsStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/AccountDetailsStyles.css
@@ -37,12 +37,16 @@
     
 .account {
     background-color: white;
+    padding: 0;
+    margin: 0;
   }
   
   .accountheader {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    padding: 0;
+    margin: 0;
   }
   
   .accountname {
