--- a/backend-webapp/DBS-backend/app/assets/stylesheets/application.css
+++ b/backend-webapp/DBS-backend/app/assets/stylesheets/application.css
@@ -13,3 +13,25 @@
  *= require_tree .
  *= require_self
  */
+ 
+.table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-bottom: 16px;
+  }
+  
+  .table th,
+  .table td {
+    padding: 12px 24px;
+    text-align: left;
+    border-bottom: 1px solid #845a5a;
+  }
+  
+  .table th {
+    font-weight: bold;
+    background-color: #f5f5f5;
+  }
+  
+  .table tbody tr:hover {
+    background-color: #f5f5f5;
+  }
