--- a/backend-webapp/DBS-backend/app/views/users/index.html.erb
+++ b/backend-webapp/DBS-backend/app/views/users/index.html.erb
@@ -2,13 +2,38 @@
 
 <h1>Users</h1>
 
-<div id="users">
-  <% @users.each do |user| %>
-    <%= render user %>
-    <p>
-      <%= link_to "Show this user", user %>
-    </p>
-  <% end %>
-</div>
+
 
 <%= link_to "New user", new_user_path %>
+
+
+<table class="table">
+  <thead>
+    <tr>
+    <th>id</th>
+      <th>user name</th>
+      <th>password</th>
+      <th>phone</th>
+      <th>email</th>
+      <th>link</th>
+
+    </tr>
+  </thead>
+  <tbody>
+    <% @users.each do |user| %>
+      <tr>
+        <td><%= user.id %></td>
+        <td><%= user.username %></td>
+        <td><%= user.password %></td>
+        <td><%= user.phone %></td>
+        <td><%= user.email %></td>
+        <td>
+          <% user.accounts.each do |acc| %>
+            <%= link_to "account: #{acc.account_number} ", user_account_transactions_path(user, acc) %>
+          <% end %>
+
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
