--- a/frontend-webapp/DBS/src/components/styles/LoginScreenStyle.css
+++ b/frontend-webapp/DBS/src/components/styles/LoginScreenStyle.css
@@ -2,6 +2,9 @@
     height: 100vh;
     width: 100vw;
     background-image: url('../assets/loginbackground.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .DBS {
@@ -49,4 +52,12 @@ input:focus {
     background-color:#066DAF ;
     color: white;
     border: none;
+}
+
+.alert {
+    color: #FF2C4E;
+    font-family: "Lato";
+    font-size: 15px;
+    margin: 0 5vw 0vh 5vw;
+    padding: 0;
 }
