--- a/frontend-webapp/DBS/src/components/styles/RecentTransactionStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/RecentTransactionStyles.css
@@ -159,6 +159,8 @@
   margin: 0;
   padding: 0;
   border-bottom: 1px solid #d2d2d2;
+  border-top: 1px solid #d2d2d2;
+
 }
 
 .date {
@@ -206,17 +208,6 @@
 .transactiondetails {
   display: flex;
   flex-direction: row;
-  align-items: center;
-  background-color: white;
-  justify-content: space-between;
-  margin: 0;
-  padding: 0 3vw;
-}
-
-
-.transactiondetails1 {
-  display: flex;
-  flex-direction: column;
   align-items: center;
   background-color: white;
   justify-content: space-between;
