--- a/frontend-webapp/DBS/src/components/styles/RecentTransactionStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/RecentTransactionStyles.css
@@ -23,7 +23,7 @@
 .transparent {
   background-color: transparent;
   border: none;
-  cursor: poLato;
+  cursor: pointer;
   padding: 0;
   margin: 0;
 }
@@ -160,7 +160,6 @@
   padding: 0;
   border-bottom: 1px solid #d2d2d2;
   border-top: 1px solid #d2d2d2;
-
 }
 
 .date {
