--- a/frontend-webapp/DBS/src/components/styles/ReturnFundsStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/ReturnFundsStyles.css
@@ -1,262 +1,248 @@
-.overall {
+.overall1 {
+    position: relative;
     width: 100vw;
     height: 100vh;
+    max-height: 100vh;
     overflow-x: hidden;
+    overflow-y: hidden;
+    margin: 0;
+    padding: 0;
+    background-color: #f6f6f6;
+}
+
+.padforRF1{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: white;
+    padding: 1vw 0 0 0;
+    border-bottom: 1px solid #d2d2d2 ;
+}
+
+
+.headertitle5{
+    flex:1;
+    font-family: 'Lato';
+    font-weight: bold;
+    font-size: 18px;
+    color: #444444;
+    text-align: center;
+}
+
+.container_parties1{
+    display: flex;
+    flex-direction: column;
+    background-color: #f6f6f6;
+    width: 100vw;
+}
+
+.recipient_container1{
+    margin-top: 3vh;
+    display: flex;
+    flex-direction: row;
+    width: 100vw;
+    height :9vh;
+    padding-left: 3vw;
+    padding-top: 2vh;
+    background-color: white;
+    border-bottom: 0.5px solid #d2d2d2;
+}
+
+.sender_container1{
+    display: flex;
+    flex-direction: row;
+    width: 100vw;
+    height :9vh;
+    padding-left: 3vw;
+    padding-top: 2vh;
+    background-color: white;
+    border-bottom: 0.5px solid #d2d2d2;
+}
+
+.profile1{
+    min-width: 12vw;
+    min-height: 12vw;
+    max-width: 12vw;
+    max-height: 12vw;
+    background-color: #066DAF;
+    border-radius: 50%;
+    margin-top: 1vh;
+}
+
+.profile2{
+    min-width: 12vw;
+    min-height: 12vw;
+    max-width: 12vw;
+    max-height: 12vw;
+    background-color: #E8B567;
+    border-radius: 50%;
+    margin-top: 1vh;
+}
+
+.account_right1{
+    height:100vh;
+    width: 100vh;
+    background-color: transparent;
+    margin-left: 5vw;
+}
+
+.accountname1{
+    flex: 1;
+    margin: 1.5vh 2vh 0 0;
+    font-size: 16px;
+    font-family: 'Lato';
+    font-weight: bold;
+    color: #2D2D2D;
+}
+
+.accountnumber1{
+    height: 100vh;
+    width: 100vw;
+    align-self: left;
+    background-color: transparent;
+    color: #2D2D2D;
+    font-size: 14px;
+    padding: 0;
+    margin: 0;
+}
+
+.gif1{
+    background-color: transparent;
+    z-index: 2;
+    padding: 0;
+    margin: 0;
+}
+.gifimage {
+    position: absolute;
+    object-fit: contain;
+    height: 10vh;
+    margin-top: -16vh;
+    margin-left: 2vw;
+}
+.txnbox1{
+    background-color: #162633;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.leftside1{
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    background-color: transparent;
+    margin: 4vh 0 0 0;
+    padding-left: 5vw;
+}
+
+.amountin1{
+    color: #C3CCD3;
+    font-size: 13px;
+    background-color: transparent;
     margin: 0;
     padding: 0;
 }
 
-.padforRF{
-    width: 100vw;
-    height: 10vh;
+.currency1{
+    color: #C3CCD3;
+    font-size: 24px;
+    font-family: 'Lato';
+    font-weight: 600;
+    background-color: transparent;
+    margin: 0.5vh 0 2.5vh 0;
+}
+
+.rightside1{
+    background-color: transparent;
     padding: 0;
-    background-color: #F6F7F9;
-    align-items: top;
+    margin-right: 5vw;
 }
 
-.headercontainer{
-    display: flex;
-    flex-direction: row;
-    width: 2000px;
-    height: 6vh;
-    background-color: #F6F7F9;
-    align-items: top;
-    padding-bottom: 0.8vh;
-    border-bottom: 1px solid #d2d2d2;
-}
-
-.headertitle{
-    flex-direction: row;
-    color: #000;
-    font-size: 18px;
-    font-family: 'Lato';
-    font-weight: 600;
-    text-align: left;
-    object-fit: contain;
-    padding-bottom: 1vh;
-    padding-left: 2vh;
-}
-
-.backarrow {
-    flex-direction: row;
-    padding-left: 4vw;
-    margin-top: 3vw;
-    background-color: transparent;
-    cursor: poLato;
-    height: 1.4vh;
-    width: 3vw;
-    border: none;
-    cursor: poLato;
-}
-
-.container_parties{
-    background-color: white;
-    width: 100vw;
-    height: 22vh;
-}
-
-.recipient_container{
-    display: flex;
-    width: 100vw;
-    height :11vh;
-    background-color: transparent;
-    border-bottom: 0.5px solid #d2d2d2;
-}
-
-.sender_container{
-    display: flex;
-    width: 100vw;
-    height :11vh;
-    background-color: transparent;
-}
-
-.profile{
-    height: 5vh;
-    width: 10vw;
-    background-color: transparent;
-    align-items: center;
-    margin-top: 1.4vh;
-    margin-left: 2vw;
-}
-
-.account_right{
-    height:100vh;
-    width: 100vh;
-    background-color: transparent;
-}
-
-.accountname{
-    flex: 1;
-    height: 2vh;
-    margin-left: 7vw;
-    font-size: 18px;
-    font-family: 'Lato';
-    font-weight: bold;
-    color: black;
-    margin-top: 3vh;
-}
-
-.accountnumber{
-    height: 100vh;
-    width: 100vw;
-    align-self: left;
-    margin-left: 1.8vh;
-    background-color: transparent;
-    color: black;
-    font-size: 14px;
-}
-
-.gif{
-    position: relative;
-    background-color: transparent;
-    width: 18vw;
-    height: 13vh;
-    z-index: 2;
-    transform: translate(-0.2vw, -6vh);
-}
-
-.txnbox{
-    background-color: #162633;
-    margin: 0vh;
-    padding: 0vh;
-    height: 13vh;
-    display: flex;
-}
-
-.leftside{
-    flex:1;
-    height: 100vh;
-    width: 20vw;
-    background-color: transparent;
-}
-
-.amountin{
-    color: #C3CCD3;
-    height: 2.5vh;
-    width: 25vw;
-    margin-top: 4vh;
-    margin-left: 1.5vh;
-    font-size: 14px;
-    background-color: transparent;
-}
-
-.currency{
-    color: #C3CCD3;
-    height: 5vh;
-    width: 25vh;
-    margin-top: 0vh;
-    margin-left: 1.4vh;
-    font-size: 26px;
-    font-family: 'Lato';
-    font-weight: 600;
-    background-color: transparent;
-}
-
-.rightside{
-    height: 10vh;
-    width: 100vh;
-    margin-left: 27vh;
-    margin-top: 3.3vh;;
-    background-color: transparent;
-}
-
-.refundamount{
+.refundamount1{
     align-self: right;
-    height:50vh;
-    width: 100vh;
-    font-size: 26px;
+    font-size: 24px;
     color:white;
     font-family: 'Lato';
     font-weight: 800;
+    padding: 0;
+    margin: 0;
+    margin-top: 4vh;
 }
 
-.RFdeetsbox{
-    object-fit: contain;
-    height: 4vh;
-    width: 100vh;
-    background-color: #F6F7F9;
+.RFdeetsbox1{
+    background-color: #f6f6f6;
+    margin: -1.5vh;
 }
 
-.RFtrfdeets{
-    font-size: 12px;
+.RFtrfdeets1{
+    font-size: 13px;
+    font-weight: bold;
     font-family: 'Lato';
     color: #999999;
-    font-weight: 800;
-    background-color: transparent;
-    height: 100vh;
-    width: 100vh;
-    margin-left: 3vh;
-    padding-top: 1vh;
+    padding-left: 8vw;
+    padding-top: 2.5vh;
+    padding-bottom: 2vh;
 }
 
-.commentsbox{
-    height: 5vh;
-    width: 100vh;
+.commentsbox1{
     background-color: white;
+    display: flex;
     flex-direction: column;
+    padding: 0;
+    margin: 0;
+    padding-left: 5vw;
 }
 
-.addcomments{
-    height: 1vh;
-    width: 100vh;
-    margin-left: 1.5vh;
+.addcomments1{
     font-size: 14px;
+    font-weight: normal;
     font-family: 'Lato';
-    font-weight: 600;
     color: #999999;
     background-color: transparent;
+    padding: 2.5vh 0 1.5vh 0;
+    margin: 0;
 }
 
-.comments{
-    height: 10vh;
-    width: 100vh;
+.comments1{
     font-size: 16px;
     font-family: 'Lato';
-    font-weight: 800;
-    margin-left: 1.5vh;;
+    margin: 0;
+    padding: 0;
+    font-weight: 600;
+    padding-bottom: 2vh;
 }
 
-.RFwarningnote{
-    display:flex;
-    background-color: #F6F7F9;
-    height: 40vh;
-    width: 100vh;
-    margin-top: 2vh;
-    padding-top: 2.5vh;
-    flex-direction: column;
-}
-
-.tncforrefund{
+.tncforrefund1{
     background-color: transparent;
-    padding-top: 16vh;
-    height: 5vh;
-    width: 43vh;
     color: #999999;
-    font-size: 14px;
+    font-size: 12px;
     font-family: 'Lato';
-    font-weight: 500;
-    margin-left: 2.5vh;
-    padding-right: 50vh;
-    text-align: justify;
+    text-align: left;
+    padding-left: 6vw;
+    max-width: 90vw;
+    position: absolute;
+    bottom: 10vh;
 }
 
-.submitbutton{
-    display:flex;
-    background-color: #1D0C86;
-    height: 6vh;
-    width: 44vh;
-    margin-left: 2.6vh;
-    border-radius: 1vh;
-}
-
-
-.submit{
+.submitbutton1{
+    margin: 0 5vw 0vh 5vw;
+    padding: 2vh;
+    border-radius: 5px;
     font-size: 18px;
-    font-family: 'Lato';
+    font-family: "Lato";
+    background-color:#1D0C86 ;
     color: white;
-    height: 6vh;
-    width: 44vh;
-    font-weight: 500;
-    margin-top: 1.7vh;
-    background-color: transparent;
- }
+    border: none;
+    width: 90vw;
+    position: absolute;
+    bottom: 4vh
+}
+
+.submitbutton1:active {
+    opacity: 0.5;
+    transition: none;
+  }
+  
