--- a/frontend-webapp/DBS/src/components/styles/TransactionDetailsStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/TransactionDetailsStyles.css
@@ -12,11 +12,12 @@
     padding-left: 3vw;
     margin-top: 2vh;
 }
+
 .transparent {
     background-color: transparent;
     border: none;
     cursor: pointer;
-  }
+}
 
 .moneyinarow{
     display: flex;
@@ -143,4 +144,70 @@
 
 .FTDbuttontext:active{
     opacity: 0.5;
+}
+
+.txdgreyout{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    z-index: 999;
+}
+
+.txdetailsPop{
+    position: fixed;
+    width: 70%;
+    height: 28%;
+    top: 35%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #ffffff;
+    padding: 10%;
+    border-radius: 10px;
+}
+
+.txdpopicon{
+    font-family: 'Lato';
+    margin-top: -10%;
+    font-size: 80px;
+    font-weight: 1000;
+    color: #A50303;
+    padding-left: 44%;
+}
+
+.txdpopheader{
+    font-family: 'Lato';
+    font-size: 25px;
+    color: #000000;
+    font-weight: bold;
+    margin: auto;
+    margin-left: 20%;
+    margin-top: -27%;
+}
+
+.txdpoptext{
+    font-family: 'Lato';
+    font-size: 15px;
+    color: #000000;
+    margin-bottom: 7%;
+    font-weight: 500;
+}
+
+.txdpopbutton{
+    display: flex;
+    height: 20%;
+    width: 90%;
+    margin: auto;
+    align-items: center;
+    justify-content: center;
+    background-color:#066DAf;
+    border-radius: 5px;
+}
+
+.txdpopbuttontext{
+    font-family: 'Lato';
+    font-size: 15px;
+    color: #ffffff;
 }
