--- a/frontend-webapp/DBS/src/components/styles/FTDTransactionStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/FTDTransactionStyles.css
@@ -131,12 +131,13 @@
 
   .sgd2 {
     font-family: 'Lato';
-    font-size: 12px;
+    font-size: 14px;
     font-weight: bold;
     color: #a3a3a3;
     text-align: right;
     margin: 0;
     padding: 0 1vw 0 0;
+    margin-top: 0.5vh;
   }
   
   .moneyout2 {
