--- a/frontend-webapp/DBS/src/components/styles/ReturnFundsStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/ReturnFundsStyles.css
@@ -1,5 +1,4 @@
 .overall1 {
-    position: relative;
     width: 100vw;
     height: 100vh;
     max-height: 100vh;
@@ -7,7 +6,7 @@
     overflow-y: hidden;
     margin: 0;
     padding: 0;
-    background-color: #f6f6f6;
+    background-color: white;
 }
 
 .padforRF1{
@@ -245,4 +244,3 @@
     opacity: 0.5;
     transition: none;
   }
-  
