--- a/frontend-webapp/DBS/src/components/styles/EnterRecipientStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/EnterRecipientStyles.css
@@ -1,54 +1,22 @@
-.overall {
-    width: 100vw;
-    height: 100vh;
-    overflow-x: hidden;
-    margin: 0;
-    padding: 0;
-}
 
-.pad{
-    width: 100vw;
-    height: 14vh;
-    padding: 0;
+.padforER1{
+    flex: 1;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 0 1vh 0;
     background-color: #F6F7F9;
-    align-items: top;
 }
 
-.paynowheadercontainer{
+.paynowheadercontainer1{
     display: flex;
     flex-direction: row;
-    width: 2000px;
-    height: 6vh;
+    text-align: center;
     background-color: white;
-    align-items: top;
-    padding-bottom: 0.8vh;
+    width: 100vw;
 }
 
-.headertitle{
-    flex-direction: row;
-    color: #000;
-    font-size: 18px;
-    font-family: 'Lato';
-    font-weight: 600;
-    text-align: left;
-    object-fit: contain;
-    padding-left: 2vh;
-    background-color: transparent;
-}
 
-.backarrow {
-    flex-direction: row;
-    padding-left: 4vw;
-    margin-top: 3vw;
-    background-color: transparent;
-    cursor: poLato;
-    height: 1.4vh;
-    width: 3vw;
-    border: none;
-    cursor: poLato;
-}
-
-.pntentermobile{
+.pntentermobileER{
     font-size: 12px;
     font-family: 'Lato';
     font-weight: 800;
@@ -58,117 +26,113 @@
     background-color: transparent;
 }
 
-.inputbox{
+.inputboxER{
     display: flex;
     flex-direction: column;
     background-color: white;
     width: 100vw;
-    height: 10vh;
 }
 
-.prompt{
-    height: 1vh;
-    width: 100vh;
-    background-color: transparent;
-}
-
-.entername{
+.enternameER{
     color: #b5b5b5;
     font-size: 14px;
     font-family: 'Lato';
-    font-weight: 550;
-    padding-left: 2VH;
+    font-weight: 600;
+    padding: 0 0 0 4vw;
+    background-color: transparent;
 }
 
-.mobilenumber{
+.mobilenumberER{
     display: flex;
-    height: 3vh;
-    width: 100vh;
-    background-color:  transparent;
+    flex-direction: row;
+    width: 100vw;
+    background-color: transparent;
+    padding: 0 0 0 1vw;
 }
 
-.phonenumber{
+.phonenumberER{
     font-size: 18px;
     font-family: 'Lato';
     font-weight: 800;
     background-color: transparent;
     color: black;
+    margin: -3vh 0 0 0;
 }
 
-.plussixfive{
-    padding-left: 2vh;
-    padding-top: 1.5vh;
+.plussixfiveER{
+    padding: 1.5vh 0 0 2vh;
 }
 
-.forwardarrowbackground{
+.forwardarrowbackgroundER{
     background-color: transparent;
+    margin: -1vh 0 2vh 2vw;
+    padding: 0;
+}
+
+.forwardarrowER{
     height: 1.5vh;
     width: 1.5vh;
     padding-top: 2.1vh;
     padding-left: 0.5vh;
 }
 
-.forwardarrow{
-    height: 1.5vh;
-    width: 1.5vh;
-    padding-top: 2.1vh;
-    padding-left: 0.5vh;
-}
-
-.eightdigit{
+.eightdigitER{
     padding-left: 1.5vh;
     padding-top: 1.5vh;
     background-color: transparent;
 }
 
-.senderbox{
-    display:flex;
+.senderboxER{
     flex-direction: column;
-    background-color: #F6F7F9;
-    height: 70vh;
-    width: 100vh;
+    background-color: transparent;
     margin-top: 2vh;
+    flex-direction: column;
+    width: 100vw;
+    max-height: 100vh;
+    background-color: #F6F7F9;
+    top: 0;
+    height: 100vh;
+}
+
+.recipientdeets{
+    display: flex;
     flex-direction: column;
 }
 
-.recipientnick{
+.recipientnickER{
     background-color: transparent;
-    height: 0vh;
-    width: 50vh;
     color: #b5b5b5;
     font-size: 16px;
     font-family: 'Lato';
-    font-weight: 550;
-    margin-left: 2.3vh;
+    font-weight: 600;
+    margin: 1vh 0 0 4vw;
 }
 
-.recipientname{
+.recipientnameER{
     font-size: 18px;
     font-family: 'Lato';
     font-weight: 800;
     padding-left: 2.4vh;
-    padding-top: 1vh;;
-}
-
-
-.pntsubmitbutton{
-    display:flex;
-    background-color: #066DAF;
-    height: 6vh;
-    width: 44vh;
-    margin-left: 2.6vh;
-    border-radius: 1vh;
-    margin-top: 50vh;
-}
-
-
-.pntsubmit{
-    font-size: 18px;
-    font-family: 'Lato';
-    color: white;
-    height: 6vh;
-    width: 44vh;
-    font-weight: 500;
-    margin-top: 1.7vh;
+    padding-top: 1vh;
     background-color: transparent;
- }
+}
+
+
+.pntsubmitbuttonER{
+    margin: 0 5vw 0vh 5vw;
+    padding: 0;
+    border-radius: 5px;
+    font-size: 18px;
+    font-family: "Lato";
+    background-color:#1D0C86 ;
+    color: white;
+    border: none;
+    width: 90vw;
+    position: absolute;
+    bottom: 4vh;
+}
+
+.pntsubmitbuttonER:active {
+    opacity: 0.5;
+    transition: none;
+  }
