--- a/frontend-webapp/DBS/src/components/styles/PayNowTxnStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/PayNowTxnStyles.css
@@ -1,9 +1,12 @@
-.overall {
+.overall1 {
     width: 100vw;
     height: 100vh;
+    max-height: 100vh;
     overflow-x: hidden;
+    overflow-y: hidden;
     margin: 0;
     padding: 0;
+    background-color: white;
 }
 
 .padding{
