--- a/frontend-webapp/DBS/src/components/styles/RefuteSuccessStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/RefuteSuccessStyles.css
@@ -1,11 +1,12 @@
-.overall {
-    object-fit: contain;
+.overall1 {
     width: 100vw;
     height: 100vh;
-    overflow: hidden;
+    max-height: 100vh;
+    overflow-x: hidden;
+    overflow-y: hidden;
     margin: 0;
     padding: 0;
-    background-color: #fefefe;
+    background-color: white;
 }
 
 .closebutton{
