--- a/frontend-webapp/DBS/src/components/styles/FTDForm_Bton.css
+++ b/frontend-webapp/DBS/src/components/styles/FTDForm_Bton.css
@@ -1,13 +1,17 @@
 .ftdbase{
-    height: 100vh;
-    width: 100%;
     align-items: center;
     justify-content: center;
     background-color: #ffffff;
+    width: 100vw;
+    height: 100vh;
+    max-height: 100vh;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    margin: 0;
+    padding: 0;
 }
 
 .RFTDbox{
-    height: 6%;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -19,7 +23,7 @@
     background-color: transparent;
     border: none;
     cursor: pointer;
-    padding-left: 1%;
+    padding-left: 1vw;
 }
 
 .RaiseFTDHeader {
@@ -33,17 +37,15 @@
 
 .transactionDetailsHeader{
     align-items: start;
-
 }
 
 .transactionDetailsText{
     font-family: 'Lato';
-    font-size: 15px;
+    font-size: medium;
     color: #000000;
     font-weight: bold;
     margin: auto;
-    padding-top: 4%;
-    margin-left: 3.5%;
+    padding-top: 2vh;
     text-align: center;
 }
 
@@ -52,94 +54,90 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    height: 7%;
-    padding-right: 2%;
-    margin-top: 7%;
+    height: 5vh;
+    padding-right: 2vw;
+    margin-top: 7vh;
 }
 
 .currencyText{
     font-family: 'Lato';
     font-size: medium;
     color: #a0a0a0;
-    font-weight: 600;
+    font-weight: bold;
     justify-content: center;
-    padding-top: 2%;
-    padding-right: 1.5%;
+    padding-top: 2vh;
+    padding-right: 1.5vw;
 }
 
 .amount1 {
     font-family: 'Lato';
-    font-size: 50px;
+    font-size: 8vh;
     justify-content: center;
-    font-weight: 1000;
+    font-weight: bold;
     color: #007D23;
-    padding-bottom: 4%;
+    padding-bottom: 2vh;
 }
 
 .amount2 {
     font-family: 'Lato';
-    font-size: 30px;
+    font-size: 4vh;
     justify-content: center;
-    font-weight: 800;
+    font-weight: bold;
     color: #007D23;
 }
 
 .txnDate
 {
     font-family: 'Lato';
-    font-size: 14px;
+    font-size: medium;
     color: #a0a0a0;
     font-weight: 600;
-    padding-left: 45%;
-    margin-top: 1;
+    text-align: center;
+    margin-top: 2vh
 }
 
 .theBoxforTrfDescription{
-    height: 23%;
-    width: 91%;
+    height: 20vh;
+    width: 90vw;
     margin: auto;
-    margin-top: 7%;
-    margin-bottom: 5%;
+    margin-top: 3vh;
+    margin-bottom: 3vh;
     background-color: #ffffff;
     border: 1px solid #dcdcdc;
-    padding-bottom: 1%;
 }
 
 .description{
-    padding-top: 6%;
     font-family: 'Lato';
-    font-size: 16px;
+    font-size: small;
     color: #999999;
-    margin:2% 3%;
+    margin:2vh 0 1vh 4vw;
     font-weight: 500;
+    font-size: medium;
 }
 
 .descriptionText{
     font-family: 'Lato';
-    font-size: 16px;
-    margin:2% 3%;
-    font-weight: 500;
+    margin: 0.5vh 0 2vh 4vw;
     color: #000000;
-}
-
-.transactionTypeHeader::before {
-    margin-left: -1%;
+    font-size: small;
+    font-weight: 800;
 }
 
 .transactionTypeHeader{
     font-family: 'Lato';
-    font-size: medium;
+    font-size: small;
     color: #999999;
-    margin: 3%; 
-    margin-top: 9%;
+    margin:2vh 0vw 0vh 4vw;
+    font-weight: 500;
+    font-size: medium;
 }
 
 .transactionTypeText{
     font-family: 'Lato';
-    font-size: medium;
-    margin: 3%;
-    padding-bottom: 5%;
+    font-size: small;
+    margin: 0.5vh 0 1vh 4vw;
     color: #000000;
+    font-weight: 800;
 }
 
 .reasonFTD{
@@ -148,31 +146,31 @@
     border-bottom: 1px solid #d4d4d4;
     display: flex;
     flex-direction: row;
-    padding-left: 3%;
+    padding-left: 3vw;
 }
 
-.reasonFTDText {
+.reasonFTDtext {
     font-family: 'Lato';
     white-space: nowrap;
     color: #000000;
-    font-weight: bold;
-    font-size: medium;
+    font-weight: 800;
+    font-size: small;
     justify-content: center;
-    padding: 5%; 
+
 }
 
 
 .borderless-input {
     border: none;
     outline: none;
-    width: 100%;
+    width: 100vw;
 }
 
 .checkbox1,.checkbox2,.checkbox3 {
     font-family: 'Lato';
-    font-size: medium;
+    font-size: small;
     border-bottom: 1px solid #e6e6e6;
-    padding: 2%;
+    padding: 1vh 1vw 1vh 1vw;
     background-color: #F6F7F9;
 }
 
@@ -181,12 +179,12 @@
     border: none;
     outline:none;
     font-family: 'Lato';
-    width: 90%;
+    width: 90vw;
     border-bottom: 1px solid #d4d4d4;
     font-size: medium;
-    padding-top: 3%;
-    margin-left: 5%;
-    padding-bottom: 0.5%;
+    padding-top: 1vh;
+    margin-left: 5vw;
+    padding-bottom: 0.5vh;
     
 }
 
@@ -194,27 +192,25 @@
     border: none;
     outline: none;
     font-family: 'Lato';
-    width:100%;
+    width:100vw;
     border-bottom: 1px solid #d4d4d4;
     font-size: medium;
-    padding-top: 3%;
-    padding-bottom: 3%;
-    padding-left: 5%;
-
-    
+    padding-top: 1.5vh;
+    padding-left: 5vw;
+    padding-bottom: 0.5vh; 
 }
 
 .commentsBox {
     background-color: transparent;
     border-bottom: 1px solid #e6e6e6 ;
-    width: 100%;
+    width: 100vw;
 }
 
 .commentsLiterally {
     font-family: 'Lato';
-    padding-top: 3%;
-    padding-bottom: 3%;
-    padding-left: 5%;
+    padding-top: 1vh;
+    padding-bottom: 3vh;
+    padding-left: 5vw;
 }
 
 .remainingCharacters {
@@ -223,25 +219,30 @@
     justify-content: right;
     text-align: right;
     color: #c9c9c9;
-    margin-bottom: -2%;
-    margin-right: 1%;
+    margin-bottom: -2vw;
+    margin-right: 2vw;
 }
 
 .container6{
 display: flex;
 justify-content: center;
 align-items: center;
-height: 44vh;
+bottom: 0;
 }
 
 .submitButton {
-background-color: #1A03A5;
-display: flex;
-justify-content: center;
-align-items: center;
-height: 7vh;
-width: 42vh;
-border-radius: 1vh;
+margin: 0 5vw 0vh 5vw;
+padding: 2vh;
+border-radius: 5px;
+font-size: 18px;
+font-family: "Lato";
+background-color:#1D0C86 ;
+color: white;
+border: none;
+width: 90vw;
+position: absolute;
+bottom: 3vh;
+text-align: center;
 }
 
 .transparent-button {
