--- a/frontend-webapp/DBS/src/components/styles/EnterRecipientStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/EnterRecipientStyles.css
@@ -90,7 +90,8 @@
     max-height: 100vh;
     background-color: #F6F7F9;
     top: 0;
-    height: 100vh;
+    max-height: 100vh;
+    overflow: hidden;
 }
 
 .recipientdeets{
